# KGTorrent

./: .env  README.rst  pyproject.toml
KGTorrent/: config.py  data_loader.py  db_communication_handler.py  downloader.py  kgtorrent.py  mk_preprocessor.py
setup/: environment.linux.yml  environment.win.yml
