[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "kgtorrent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kaggle = "^1.5.16"
SQLAlchemy = "^2.0.22"
tqdm = "^4.66.1"
numpy = "^1.26.1"
requests = "^2.31.0"
sqlalchemy-utils = "^0.41.1"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"

[tool.poetry.scripts]
kgtorrent = 'KGTorrent.kgtorrent:entry'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
